--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -8,7 +8,21 @@
       <li>
         姓名：<input type="text" [(ngModel)]="user.username" name="username" />
       </li>
+      <li>
+        性别：<input
+          type="radio"
+          value="1"
+          [(ngModel)]="user.sex"
+          name="sex"
+        /><label for="男">男</label>
+        <input type="radio" value="2" [(ngModel)]="user.sex" name="sex" /><label
+          for="女"
+          >女</label
+        >
+      </li>
     </ul>
     <button (click)="getsubmit()">获取表单内容</button>
+    <br />
+    {{ user | json }}
   </form>
 </div>
