--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -18,7 +18,7 @@ ul {
     height: 50px;
     line-height: 50px;
 
-    input {
+    input[type="text"] {
       min-width: 300px;
       height: 40px;
       border-radius: 22px;
@@ -29,6 +29,27 @@ ul {
         outline: none;
         border: 1px solid rgb(68, 68, 68);
       }
+    }
+  }
+
+  button {
+    min-width: 100px;
+    margin: 0 auto;
+    display: inherit;
+    border-radius: 10px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px 1px #b1b1b1;
+    color: rgb(75, 75, 75);
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
+      //   border: 1px solid rgb(68, 68, 68);
+    }
+
+    &:hover {
+      border: 1px solid rgb(68, 68, 68);
+      box-shadow: 0px 0px 0px 0px #b1b1b1;
     }
   }
 }
